# EstruturaDeProjetos

./: .pre-commit-config.yaml  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
app/pipeline/: extract.py  load.py  transform.py
data/output/: arquivo_concatenado.xlsx
docs/: index.md
search/: search_index.json
tests/: test_pipeline.py
