[tool.poetry]
name = "estruturadeprojetos"
version = "0.1.0"
description = "Projeto de etl"
authors = ["Gustavo Miranda <gustavocataldomiranda@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
