[tool.poetry]
name = "estruturadeprojetos"
version = "0.1.0"
description = "Projeto de etl"
authors = ["Gustavo Miranda <gustavocataldomiranda@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
openpyxl = "^3.1.5"
pytest = "^8.3.3"
blue = "^0.9.1"
isort = "^5.13.2"
pydocstyle = "^6.3.0"
taskipy = "^1.13.0"
mkdocs = "^1.6.1"
mkdocstrings-python = "^1.11.1"
pygments = "^2.18.0"
mkdocs-material = "^9.5.34"
pymdown-extensions = "^10.9"
pre-commit = "^3.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
format = "isort . && blue ."
test = "poetry run pytest -v"
run = "python3 app/main.py"